--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+            background-color: #EED6CE;
+        }
+
         h1 {
             color: rgb(1, 80, 1);
         }
@@ -14,17 +18,21 @@
         #thirdItem {
             background-color: rgb(190, 190, 255);
         }
-        #firstHeading{
+
+        #firstHeading {
             text-decoration: underline
         }
+
         .largeText {
             font-size: 25px;
         }
+
         .profile_main {
             width: 150px;
             border-radius: 50%;
             border: 2px dotted rgb(43, 255, 0);
         }
+
         /* full list of css rules: https://www.w3schools.com/css/css_intro.asp */
     </style>
 
